--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -665,6 +665,8 @@
     }
    ],
    "source": [
+    "\n",
+    "#paso 4\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
@@ -678,13 +680,12 @@
     "    }\n",
     "\n",
     "\n",
-    "# Configurar GridSearchCV\n",
     "model = GridSearchCV(\n",
     "    pipeline,\n",
     "    param_grid,\n",
-    "    cv=10,  # Validación cruzada con 10 particiones\n",
+    "    cv=10, \n",
     "    scoring='balanced_accuracy', \n",
-    "    refit=True,  # Ajustar usando la métrica principal\n",
+    "    refit=True, \n",
     "    n_jobs=-1,\n",
     "    verbose=2,\n",
     ")\n",
